tests: check decoding of getrlimit and setrlimit syscalls
* tests/xetrlimit.c: New file.
* tests/xetrlimit.test: New test.
* tests/.gitignore: Add xetrlimit.
* tests/Makefile.am (check_PROGRAMS): Likewise.
(DECODER_TESTS): Add xetrlimit.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -330,6 +330,7 @@ check_PROGRAMS = \
 	xetitimer \
 	xetpgid \
 	xetpriority \
+	xetrlimit \
 	xettimeofday \
 	# end of check_PROGRAMS
 
@@ -622,6 +623,7 @@ DECODER_TESTS = \
 	xetitimer.test \
 	xetpgid.test \
 	xetpriority.test \
+	xetrlimit.test \
 	xettimeofday.test \
 	# end of DECODER_TESTS
 
