--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,17 @@
-*~
-*.o
-.deps
-.libs
-.version
-.*.swp
 *.gcda
 *.gcno
 *.gdb
-core
-.gdbinit
+*.o
+*~
+.*.swp
+.deps
 .gdb_history
-
-/ChangeLog
+.gdbinit
+.libs
+/*.mpers.i
+/.version
 /CREDITS
-
-Makefile
-Makefile.in
-
+/ChangeLog
 /aclocal.m4
 /autom4te.cache
 /compile
@@ -29,31 +24,16 @@ Makefile.in
 /configure
 /depcomp
 /install-sh
-/missing
-/stamp-h1
-
-/*.gdb
-/strace
-/test-driver
-
 /ioctlent[012].h
 /ioctls_all[012].h
 /ioctlsort[012]
-
-/sen.h
-/sys_func.h
-
-/strace-*.tar.xz
-
-/tests-m32
-/tests-mx32
-
 /libmpers-m32.a
 /libmpers-mx32.a
 /m32_funcs.h
 /m32_printer_decls.h
 /m32_printer_defs.h
 /m32_type_defs.h
+/missing
 /mpers-m32
 /mpers-m32.stamp
 /mpers-mx32
@@ -67,4 +47,14 @@ Makefile.in
 /native_printer_decls.h
 /native_printer_defs.h
 /printers.h
-/*.mpers.i
+/sen.h
+/stamp-h1
+/strace
+/strace-*.tar.xz
+/sys_func.h
+/test-driver
+/tests-m32
+/tests-mx32
+Makefile
+Makefile.in
+core
